--- a/BackEnd-ExpressJS/package.json
+++ b/BackEnd-ExpressJS/package.json
@@ -14,6 +14,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3"
   },
+  "scripts":{
+    "start": "node index.js"
+  },
   "devDependencies": {
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
