--- a/BackEnd-ExpressJS/package.json
+++ b/BackEnd-ExpressJS/package.json
@@ -15,7 +15,7 @@
     "mongoose": "^5.7.3"
   },
   "scripts":{
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
