--- a/BackEnd-ExpressJS/package.json
+++ b/BackEnd-ExpressJS/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.3"
+    "mongoose": "^5.7.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "nodemon index.js"
