--- a/BackEnd-ExpressJS/package.json
+++ b/BackEnd-ExpressJS/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.17.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
+    "multer": "^1.4.2",
     "uuid": "^3.3.3"
   },
   "scripts": {
